Bug 328259 - Select source for Duplicate Brush with Ctrl+Click doesn't work since the merge of the shortcuts branch
Summary: Select source for Duplicate Brush with Ctrl+Click doesn't work since the merg...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-30 19:45 UTC by Dmitry Kazakov
Modified: 2013-12-02 09:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2013-11-30 19:45:00 UTC
subj
Comment 1 Dmitry Kazakov 2013-12-02 04:57:26 UTC
Git commit 92e798708b62d53990cf6995c3baf981064a3db0 by Dmitry Kazakov.
Committed on 02/12/2013 at 04:57.
Pushed by dkazakov into branch 'master'.

Fix selecting the source of the Duplicate Op

M  +1    -1    krita/ui/tool/kis_tool_freehand.cc

http://commits.kde.org/calligra/92e798708b62d53990cf6995c3baf981064a3db0
Comment 2 Dmitry Kazakov 2013-12-02 09:20:16 UTC
Git commit bbf3a7666e469c2ccd14bd77cacf61e5955c1596 by Dmitry Kazakov.
Committed on 02/12/2013 at 04:57.
Pushed by dkazakov into branch 'calligra/2.8'.

Fix selecting the source of the Duplicate Op

M  +1    -1    krita/ui/tool/kis_tool_freehand.cc

http://commits.kde.org/calligra/bbf3a7666e469c2ccd14bd77cacf61e5955c1596