Fix selecting the source of the Duplicate Op

BUG:328259